Image overflow fix

--- a/client/src/css/quizzes.css
+++ b/client/src/css/quizzes.css
@@ -127,9 +127,18 @@ h1 {
 
 .quiz-card img.quiz-image {
     width: 100%;
-    height: 150px;
+    height: 120px;
     border-radius: 10px;
     margin-bottom: 10px;
+}
+.favorite-section {
+    margin-top: 5px; 
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px 8px;
+    border-radius: 10px;
 }
 
 @media (max-width: 768px) {
